<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Elderly Portal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //from here are the strings I (Scott) add
    <string-array name="medicine_list_spinner_sorting_options">
        <item>Brand Name</item>
        <item>Scientific Name</item>
        <item>Refill Date</item>
    </string-array>

    //from here are the strings I (Hua) add
    <string name="med_name">Medicine Name</string>
    <string name="dose">Dosage</string>
    <string name="how_often">How Often Dosage is Taken</string>
    <string name="TID_Code">TID Code</string>
    <string name="BID_Code">BID Code</string>
    <string name="num_refills">Number of Refills</string>
    <string name="med_notes">Medicine Notes</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="picturePillBottleString">Take Pill Bottle Picture</string>

    // from here are the strings I (John) add
    <string name="doseTime">Hour of day:</string>
    <string name="numOfPills">Number of pills:</string>
    <string name="addADose">Add Dose</string>
    <string-array name="time_array">
        <item>12:00 AM</item>
        <item>1:00 AM</item>
        <item>2:00 AM</item>
        <item>3:00 AM</item>
        <item>4:00 AM</item>
        <item>5:00 AM</item>
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
        <item>12:00 PM</item>
    </string-array>
    <string-array name="numOfPills_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <!-- from here are the strings I (Neil) add -->
    <string name="text_size">Text Size</string>
    <string-array name="text_size_array">
        <item>Default</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="auto_alerts">Auto Alerts</string>
    <string-array name="auto_alerts_array">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string name="reminder_preference">Reminder Preference</string>
    <string-array name="reminder_preference_array">
        <item>Hourly</item>
        <item>AM/PM</item>
    </string-array>
    <string name="set_reminder_times">Set Reminder Times</string>
    <string name="edit_alerts">Edit Alerts</string>
    <string name="long_term_reminder">Long-Term Reminders</string>
    <string-array name="long_term_reminder_array">
        <item>5 Day Reminder</item>
        <item>Weekly Reminder</item>
        <item>10 Day Reminder</item>
    </string-array>
    <string name="share_history">Share History</string>


</resources>
