<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="Settings"
            android:textSize="60sp"
            android:textColor="#ff222222" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size"
            android:textSize="30sp"
            android:textColor="#ff222222"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_size_spinner"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_alerts"
            android:textSize="30sp"
            android:textColor="#ff222222"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auto_alerts_spinner"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_preference"
            android:textSize="30sp"
            android:textColor="#ff222222"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reminder_preference_spinner"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/set_reminder_times"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder_times"
            android:onClick="onSetReminderTimesButtonClick"
            android:textColor="#ff222222"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/edit_alerts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_alerts"
            android:onClick="onEditAlertsButtonClick"
            android:textColor="#ff222222"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_term_reminder"
            android:textSize="30sp"
            android:textColor="#ff222222"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/long_term_reminder_spinner"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/share_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_history"
            android:onClick="onShareHistoryButtonClick"
            android:textColor="#ff222222"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/main_menu_from_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Main Menu"
            android:onClick="onMainMenuButtonClick"
            android:background="#3D95CE"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp" />

    </LinearLayout>
</ScrollView>