<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doseTime"
            android:textSize="30sp"
            />

        <EditText android:id="@+id/time"
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:gravity="top"
            />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numOfPills"
            android:textSize="30sp"
            />

        <EditText android:id="@+id/numOfPills"
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:inputType="text"
            />

        <Button android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveButtonClick"
            />

    </LinearLayout>
</ScrollView>