<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Take Pill Bottle Picture:"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <Button android:id="@+id/picturePillBottle"
        android:text="@string/picturePillBottleString"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:onClick="onTakePillBottleButtonClick"
        android:layout_margin="10dp"
        android:background="#3D95CE"
        android:textColor="#ffffffff" />

    <ImageView
        android:id="@+id/pillBottleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">
    </ImageView>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Daily doses:"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <LinearLayout
        android:id="@+id/lin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="40px"></LinearLayout>

    <Button android:id="@+id/addADose"
        android:text="@string/addADose"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:onClick="onAddADoseButtonClick"
        android:layout_margin="10dp"
        android:background="#3D95CE"
        android:textColor="#ffffffff" />

    <TextView android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="Brand Name"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <EditText android:id="@+id/brand_name"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_weight="1"
        android:inputType="text"
        android:gravity="top"
        android:layout_margin="10dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scientific Name"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <EditText android:id="@+id/sci_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text"
        android:gravity="top"
        android:layout_margin="10dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Instructions"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <EditText android:id="@+id/instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text"
        android:gravity="top"
        android:layout_margin="10dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="Number of Refills"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <EditText android:id="@+id/num_refills"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:inputType="text"
        android:layout_margin="10dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refill Date"
        android:textSize="30sp"
        android:layout_margin="10dp" />

    <EditText android:id="@+id/refill_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:inputType="text"
        android:layout_margin="10dp" />

    <LinearLayout
        android:id="@+id/hoz_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="10dp">

        <Button android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:onClick="onSaveButtonClick"
            android:layout_margin="10dp"
            android:background="#3D95CE"
            android:textColor="#FFFFFF" />

        <Button android:id="@+id/clear"
            android:text="@string/clear"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:onClick="onClearButtonClick"
            android:layout_margin="10dp"
            android:background="#ffdfdfdf" />

    </LinearLayout>

</LinearLayout>
</ScrollView>